updating end points. updating openapi
